--- a/app_manifest.json
+++ b/app_manifest.json
@@ -5,7 +5,8 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
   "Capabilities": {
-    "Uart": [ "ISU0" ]
+    "Uart": [ "ISU0" ],
+    "Gpio": [ 8 ]
   },
   "ApplicationType": "RealTimeCapable"
 }
